Fix wrapping on form labels

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ a {
     padding: 0;
     position: relative;
     text-align: left;
-    text-transform: none; }
+    text-transform: none;
+    white-space: normal; }
     #embedded-form-wrapper .wForm form label.preField.reqMark::after,
     #embedded-form-wrapper .wForm form label.postField.reqMark::after {
       color: #EF4044;
