--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -59,6 +59,7 @@
     position: relative;
     text-align: left;
     text-transform: none;
+    white-space: normal;
 
     &.reqMark::after {
       color: $error-color;
